syntax = "proto3";

package auth;

option go_package = "Backend/proto/auth";

import "google/protobuf/timestamp.proto";

// Auth Service
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// Messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  UserInfo user = 2;
  string error = 3;
}

message UserInfo {
  int32 id = 1;
  string email = 2;
  string role = 3;
  string nombre_completo = 4;
  string telefono = 5;
  google.protobuf.Timestamp fecha_registro = 6;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int32 user_id = 2;
  string email = 3;
  string role = 4;
  string error = 5;
}
